CloudFormation_day_3/network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Network configuration for my webserver
Metadata: {}

Parameters: {}

Mappings: {}

Conditions: {}

Resources: 
  # VPC resources
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: myVPC

  igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref myVPC
      InternetGatewayId: !Ref igw

  subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref myVPC
      CidrBlock: 10.10.1.0/24
      Tags:
        - Key: Name
          Value: sub1

  subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref myVPC
      CidrBlock: 10.10.2.0/24
      Tags:
        - Key: Name
          Value: sub2

  routeTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: pubrt1

  routeTableAssocName:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnet1
      RouteTableId: !Ref routeTable

  secGroupName:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: mySecurityGroup
      GroupDescription: Security Group for MyEC2Instance
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: SG

  myEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: virginia-keypair
      ImageId: ami-03eb6185d756497f8
      InstanceType: t2.micro
      SecurityGroupIds:
        - !GetAtt secGroupName.GroupId
      SubnetId: !Ref subnet1
      UserData: !Base64 |
        #!/bin/bash 
            sudo su
            apt update -y
            apt -y install apache2
            systemctl start apache2
            systemctl enable apache2
            apt install wget -y
            wget https://github.com/awanmbandi/google-cloud-projects/raw/jjtech-flix-app/jjtech-streaming-application-v1.zip 
            apt install unzip -y
            unzip jjtech-streaming-application-v1.zip
            rm -f /var/www/html/index.html
            cp -rf jjtech-streaming-application-v1/* /var/www/html/
      Tags:
        - Key: Name
          Value: demo-server

Outputs: {}
